[package]
description = "Agnostic representation of HTTP/1.1 and HTTP/2.0 for parsing, generating and translating HTTP messages, with zero-copy, made for Sōzu."
edition = "2021"
keywords = ["http", "h1", "h2", "clevercloud"]
license-file = "LICENSE"
name = "kawa"
readme = "README.md"
repository = "https://github.com/CleverCloud/kawa"
rust-version = "1.66.1"
version = "0.6.6"
authors = [
    "Eloi Démolis <eloi.demolis@clever-cloud.com>",
    "Emmanuel Bosquet <emmanuel.bosquest@clever-cloud.com>",
    "Florentin Dubois <florentin.dubois@clever-cloud.com>"
]


[dependencies]
nom = "7.1.3"

[features]
default = ["simd", "tolerant-parsing", "rc-alloc"]
rc-alloc = []
custom-vecdeque = []
simd = []
tolerant-parsing = []

[profile.release]
lto = true
debug = true
codegen-units = 1
# rustflags = ["-C target-feature=+sse4.2", "-C target-cpu=native"]
